      possible covers.
    * Improved guessing tags from filename. Added preview to Dialog.
    * Display frames around lyrics/video applets for indicating focus.
    * Improved keyboard functions when editing lyrics from the applet.
    * Improved automatic resizing of lyrics and suggestions in the context applet.

  BUGFIXES:
    * Fixed layout resizing bug with Qt 4.6. (BR 213990)
    * Fixed corrupted track lengths when copying to iPod. Patch by Christophe 
      Fergeau <teuf@gnome.org> (BR: 215124)
    * Fixed videoclip applet going blank when switching from one video to 
      another. (BR 210332)
    * Fixed dailymotion video file direct link retrieving not working. (BR 214168)
    * Fixed wikipedia engine not parsing correctly URL containing ":". (BR 209397)
    * Fixed several issues with loading and saving timecode tracks to and from
      playlists.
    * Fixed crash when copying tracks to MP3tunes music locker. (BR 214686)
      Patch by Nicolas Lécureuil <nlecureuil@mandriva.com>.
    * Podcast downloads can now be properly canceled. Patch by Frank Meerkötter.
    * Fixed any open menus or popus getting closed when the OSD is shown.
    * Fixed copies of default layouts getting created even if just using the
      inline editor to change track metadata.
    * Fixed inline playlist editor saving values that had been edited but
      where the value had not actually changed.
    * Pressing enter now correctly applies changes in the playlist inline
      editor. (BR 215924)
    * The volume slider in the Slim Toolbar would sometimes work incorrectly
      after startup. (BR 215185)
    * Fixed popup for showing the progress of multiple taks not working.
    * Made dragging from podcast list to external program work. (BR 212343)
    * Made dragging from the Last.fm service directly to the playlist work.
      (BR 215494)
    * Fixed crash during copying to collection with custom file naming schemes
      where a component would be empty. (BR 211518)